newratio